--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Coursebook++",
 	"version": "1.0",
 	"description": "Displays utdgrades and ratemyprof info for a selected course on coursebook.utd",
-	"permissions": ["declarativeContent", "storage"],
+	"permissions": ["declarativeContent", "*://*/*", "storage"],
 	//"options_page": "options.html",
 	"background": {
 		"scripts": ["background.js"],
