--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Coursebook++",
 	"version": "1.0",
 	"description": "Displays utdgrades and ratemyprof info for a selected course on coursebook.utd",
-	"permissions": ["declarativeContent", "*://*/*", "storage"],
+	"permissions": ["declarativeContent", "*://*/*", "storage","activeTab"],
 	//"options_page": "options.html",
 	"background": {
 		"scripts": ["background.js"],
@@ -17,6 +17,12 @@
 	"icons": {
 		"16": "images/pixelTemoc16.png"
 	},
+	"content_scripts": [
+	{
+		"matches": ["https://www.ratemyprofessors.com/*"],
+		"js": ["ContentScript2.js"]
+		}
+	],
 	"manifest_version": 2
 	
 }
